WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289290
AX: WebKit (and other engines currently) fails computedlabel expectation for <img title="foo" alt="">
https://bugs.webkit.org/show_bug.cgi?id=289290
Summary
AX: WebKit (and other engines currently) fails computedlabel expectation for ...
James Craig
Reported
2025-03-06 15:39:24 PST
AX: WebKit (and other engines currently) fails computedlabel expectation for <img title="foo" alt=""> Looks like the explicit alt="" overrides the included title attribute.
https://wpt.fyi/results/accname/name/comp_tooltip.tentative.html?label=pr_head&max-count=1&pr=49552
ARIA WG discussed and agreed this case should pass. WPT test was adjusted to align with the spec.
https://github.com/web-platform-tests/wpt/pull/49552
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-06 15:39:37 PST
<
rdar://problem/146429365
>
James Craig
Comment 2
2025-03-06 15:49:55 PST
WebKit:
https://webkit.org/b/289290
Chromium:
https://issues.chromium.org/issues/401294444
Gecko:
https://bugzilla.mozilla.org/show_bug.cgi?id=1952401
Rahim Abdi
Comment 3
2025-03-12 13:01:31 PDT
Pull request:
https://github.com/rahimabdi/WebKit/pull/1
Rahim Abdi
Comment 4
2025-03-12 13:51:18 PDT
(In reply to rahim_abdi from
comment #3
)
> Pull request:
https://github.com/rahimabdi/WebKit/pull/1
Please disregard this pull request. It looks like my "git-webkit pull-request" accidentally raised a PR against my fork and not upstream (
https://github.com/WebKit/WebKit.git
).
Rahim Abdi
Comment 5
2025-03-12 16:01:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42354
EWS
Comment 6
2025-03-13 11:14:38 PDT
Committed
292105@main
(fbcb00b98357): <
https://commits.webkit.org/292105@main
> Reviewed commits have been landed. Closing PR #42354 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug