Source/WebCore/accessibility/AccessibilityRenderObject.cpp
@@ -1201,15 +1201,9 @@ bool AccessibilityRenderObject::computeIsIgnored() const
         if (canSetFocusAttribute())
             return false;
 
-        // webkit.org/b/173870 - If an image has other alternative text, don't ignore it if alt text is empty.
-        // This means we should process title and aria-label first.
-
-        // If an image has an accname, accessibility should be lenient and allow it to appear in the hierarchy (according to WAI-ARIA).
-        if (hasAccNameAttribute())
-            return false;
-
         // First check the RenderImage's altText (which can be set through a style sheet, or come from the Element).
         // However, if this is not a native image, fallback to the attribute on the Element.
+        // If the image is decorative (i.e. alt=""), it should be ignored even if a title, aria-label, etc. is supplied.
         AccessibilityObjectInclusion altTextInclusion = AccessibilityObjectInclusion::DefaultBehavior;
         WeakPtr image = dynamicDowncast<RenderImage>(*m_renderer);
         if (image)
@@ -1220,6 +1214,13 @@ bool AccessibilityRenderObject::computeIsIgnored() const
         if (altTextInclusion == AccessibilityObjectInclusion::IgnoreObject)
             return true;
         if (altTextInclusion == AccessibilityObjectInclusion::IncludeObject)
+            return false;
+
+        // webkit.org/b/173870 - If an image has other alternative text, don't ignore it if alt text is empty.
+        // This means we should process title and aria-label first.
+
+        // If an image has an accname, accessibility should be lenient and allow it to appear in the hierarchy (according to WAI-ARIA).
+        if (hasAccNameAttribute())
             return false;
 
         if (image) {
